...
            android:layout_marginLeft="14dp"
            android:layout_marginTop="220dp"
            android:text="Last Name" />


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="320dp"
            android:text="Email" />


        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createButton"
            android:layout_below="@id/firstName"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createButton"
            android:layout_below="@id/lastName"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createButton"
            android:layout_below="@id/email"
            android:layout_marginTop="10dp"
            android:ems="10"
...
