...
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp"
            android:text="Project Name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/projectNameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="text"
            android:text="" />
...
            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update" />
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete" />

            <TextView
                android:id="@+id/reportTitle"
...
